[gd_scene load_steps=11 format=2]

[ext_resource path="res://level.gd" type="Script" id=1]
[ext_resource path="res://level/bg.png" type="Texture" id=2]
[ext_resource path="res://level/level.png" type="Texture" id=3]
[ext_resource path="res://level/header.png" type="Texture" id=4]
[ext_resource path="res://level/1.png" type="Texture" id=5]
[ext_resource path="res://level/2.png" type="Texture" id=6]
[ext_resource path="res://gamescrenns/upgrade.png" type="Texture" id=7]
[ext_resource path="res://audio/Lost-Jungle_Looping.ogg" type="AudioStream" id=8]
[ext_resource path="res://touchjoy/3.png" type="Texture" id=9]
[ext_resource path="res://touchjoy/text.png" type="Texture" id=10]

[node name="level" type="Node2D"]
script = ExtResource( 1 )

[node name="bg" type="Sprite" parent="."]
position = Vector2( 520.286, 282.847 )
scale = Vector2( 0.911036, 0.425703 )
texture = ExtResource( 2 )

[node name="level" type="Sprite" parent="bg"]
position = Vector2( -391.054, -85.9812 )
texture = ExtResource( 3 )

[node name="header" type="Sprite" parent="bg"]
position = Vector2( -16.0707, -338.193 )
scale = Vector2( 0.465912, 1 )
texture = ExtResource( 4 )

[node name="Button" type="Button" parent="."]
margin_left = 92.0806
margin_top = 309.391
margin_right = 128.081
margin_bottom = 375.391
icon = ExtResource( 5 )
flat = true

[node name="Button2" type="Button" parent="."]
margin_left = 271.595
margin_top = 305.329
margin_right = 327.595
margin_bottom = 372.329
icon = ExtResource( 6 )
flat = true

[node name="Button3" type="Button" parent="."]
margin_left = 792.231
margin_top = 594.646
margin_right = 1018.23
margin_bottom = 815.646
rect_rotation = -89.9999
icon = ExtResource( 7 )
flat = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
autoplay = true

[node name="Button4" type="Button" parent="."]
margin_left = 454.861
margin_top = 299.383
margin_right = 508.861
margin_bottom = 367.383
icon = ExtResource( 9 )
flat = true

[node name="load" type="Sprite" parent="."]
visible = false
modulate = Color( 0.188235, 0.0313726, 0.0313726, 1 )
position = Vector2( 499.211, 335.63 )
scale = Vector2( 2.98171, 1 )
texture = ExtResource( 10 )

[node name="World1" type="Timer" parent="."]

[node name="World2" type="Timer" parent="."]

[node name="World3" type="Timer" parent="."]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
[connection signal="timeout" from="World1" to="." method="_on_World1_timeout"]
[connection signal="timeout" from="World2" to="." method="_on_World2_timeout"]
[connection signal="timeout" from="World3" to="." method="_on_World3_timeout"]
